kube/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-db
  ports:
    - port: 3306
      targetPort: 3306
