kube/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: journal-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: journal-routes
spec:
  hosts:
  - "*"
  gateways:
  - journal-gateway
  http:
 
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service
        port:
          number: 5000

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
